# qmlOS

./: default.xml
config/: CMakeLists.txt  LiriSubprojects.cmake
config/_devcontainer/: Dockerfile  devcontainer.json
